--- a/tutorial/SST1 data tutorial.ipynb
+++ b/tutorial/SST1 data tutorial.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we import the modules we're going to use: (note the hack to put the library directory on the path)"
+    "First, we import the modules we're going to use:"
    ]
   },
   {
@@ -3764,7 +3764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
