adding cell on multiple data set loading to the cms-giwaxs_process.ipynb notebook

--- a/tutorial/instrument-specific/CMS/cms-giwaxs_processing.ipynb
+++ b/tutorial/instrument-specific/CMS/cms-giwaxs_processing.ipynb
@@ -1381,6 +1381,95 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a9c5272",
+   "metadata": {},
+   "source": [
+    "### Loading & Data Processing for Multiple Data Sets\n",
+    "Includes garbage collector (gc) method that clears unused memory allocations. Automatically clears xarray DataArray variables, removes them from memory, and reinitializes them in each loop iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df4df1e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "\n",
+    "# Define your relevant paths here, you can use the \".exists()\" method to make sure you defined a path correctly.\n",
+    "userPath = pathlib.Path('/nsls2/users/kwhite1')  # Your users path is great for small items that are personal to you (100 GB limit)\n",
+    "propPath = pathlib.Path('/nsls2/data/cms/proposals/2023-2/pass-311415')  # The proposals path is a good place to store large data (>1 TB space?)\n",
+    "dataPath = propPath.joinpath('2023C2_KWhite')\n",
+    "maskponiPath = userPath.joinpath('github_repositories/giwaxs_suite/ponimask_kwhite')\n",
+    "savePath = dataPath.joinpath('analysis')\n",
+    "\n",
+    "# PONI File & Mask Filepaths\n",
+    "poniFile = maskponiPath.joinpath('jun23_poni_01_LaB6_5.6m_12.7keV_corrected_1150.1s_x-1.601_th0.500_5.00s_1116949_maxs.poni')\n",
+    "# maskFile = maskponiPath.joinpath('LaB6.json')\n",
+    "maskFile = maskponiPath.joinpath('jun23_nslsii11bmcms_WAXS2pil1M_mask_02.edf')\n",
+    "# add function to convert .edf to .json file\n",
+    "\n",
+    "# Create pg Transform objects with the above information:\n",
+    "pg_transformer = phs.GIWAXS.Transform(poniPath=poniFile, maskPath=maskFile)\n",
+    "\n",
+    "# My example metadata filename naming schemes:\n",
+    "    # Make sure the length of this list lines up with your filenames split by underscore (or however you split them)!\n",
+    "\n",
+    "trgiwaxs_metadata_keylist = ['samplenum', 'chemistry', 'solvent', 'concentration', 'flow_rate',\n",
+    "                    'substrate', 'solution_volume', 'run_number', 'time_start',\n",
+    "                    'x_pos', 'incident_angle', 'exposure_time', 'scan_id', \n",
+    "                    'series_number', 'detector']\n",
+    "\n",
+    "# Initalize CMSGIWAXSLoader objects with the above naming schemes\n",
+    "series_loader = phs.load.CMSGIWAXSLoader(md_naming_scheme = trgiwaxs_metadata_keylist)\n",
+    "\n",
+    "# Declare a sample list corresponding to each sample you want to iterate over.\n",
+    "samplelist = ['sam16_3mai1pbi2_dmf_1m_5scfh_Si_40uL_010',\n",
+    "              'sam99_1mai1pbi2_1dmf1dmso_1m_5scfh_Si_40uL_011',\n",
+    "              'sam22_1mai1pbi2_dmso_1m_5scfh_Si_40uL_013',\n",
+    "              'sam29_1mai1pbi2_dmf_0p1m_5scfh_Si_40uL_015',\n",
+    "              'sam30_1mai1pbi2_dmf_0p5m_5scfh_Si_40uL_016',\n",
+    "              'sam32_3mai1pbi2_dmf_0p5m_5scfh_Si_40uL_018']\n",
+    "            \n",
+    "# display(sorted([f.name for f in samplePath.iterdir()]))  # View all files\n",
+    "\n",
+    "# Create a list of series scan ID values to loop through, will need to update this for multiple exposures within a single set.\n",
+    "series_sets = ['1116215', '1116248', '1116295', # sam16_010, sam99_011, sam22_013, \n",
+    "               '1116338', '1116357', '1116406'] # sam29_015, sam30_016, sam32_018\n",
+    "\n",
+    "# Assume series_sets is a list of your series_sets\n",
+    "for i, series_set in enumerate(series_sets):\n",
+    "    sample = samplelist[i] # grab the series samplename from the list\n",
+    "    print(sample)\n",
+    "    \n",
+    "    samplePath = dataPath.joinpath(sample, 'maxs/raw')  # CMS data is usually stored like this with the detector/raw\n",
+    "    print(samplePath)\n",
+    "    \n",
+    "    series_set = set(samplePath.glob(f'*{series_sets[i]}*')) # grab the series id correpsonding to the specific set\n",
+    "    \n",
+    "    DA = series_loader.loadSeries(sorted(series_set)) \n",
+    "    suffix = f'{DA.samplenum}_{DA.chemistry}_{DA.solvent}_{DA.concentration}_{DA.scan_id}_{DA.run_number}'\n",
+    "\n",
+    "    raw_DS = DA.to_dataset(name='DA')\n",
+    "    raw_DS.to_zarr(savePath.joinpath('raw_series_zarrs', f'raw_{suffix}.zarr'), mode='w')\n",
+    "\n",
+    "    # Moving the transformation here\n",
+    "    recip_DA, caked_DA = pg_transformer.pg_convert_series(DA)\n",
+    "\n",
+    "    recip_DS = recip_DA.to_dataset(name='DA')\n",
+    "    recip_DS.to_zarr(savePath.joinpath('recip_series_zarrs', f'recip_{suffix}.zarr'), mode='w')\n",
+    "\n",
+    "    caked_DS = caked_DA.to_dataset(name='DA')\n",
+    "    caked_DS.to_zarr(savePath.joinpath('caked_series_zarrs', f'caked_{suffix}.zarr'), mode='w')\n",
+    "\n",
+    "    # Clear DA, raw_DS, recip_DA, recip_DS, caked_DA, caked_DS\n",
+    "    del DA, raw_DS, recip_DA, recip_DS, caked_DA, caked_DS\n",
+    "    gc.collect() # Explicitly perform garbage collection\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "89d72a19-8729-4ebd-914a-9cba20016a72",
    "metadata": {
     "tags": []
