updated cms giwaxs tutorials to reflected updated cms-giwaxs-support

--- a/tutorial/instrument-specific/CMS/cms-giwaxs_poni_generation_template.ipynb
+++ b/tutorial/instrument-specific/CMS/cms-giwaxs_poni_generation_template.ipynb
@@ -7,7 +7,9 @@
     "tags": []
    },
    "source": [
-    "# CMS GIWAXS mask & .poni generation notebook"
+    "# CMS GIWAXS mask & .poni generation notebook\n",
+    " \n",
+    "#### This notebook is incomplete and the draw.ui() is currently not working. For now, it's probably easier to just use the pyFAI or other GUIs / softwares to draw masks and generate calibration info/files. "
    ]
   },
   {
@@ -20,8 +22,11 @@
    },
    "outputs": [],
    "source": [
-    "# Kernel updates if needed, remember to restart the kernel after running this cell!:\n",
-    "!pip install -e /nsls2/users/alevin/repos/PyHyperScattering  # to use pip to install via directory"
+    "# # Outdated, this used to work to just overwrite existing PyHyper install in JupyterHub conda environment\n",
+    "# # If you need a custom PyHyper version install, you may need your own conda environment\n",
+    "\n",
+    "# # Kernel updates if needed, remember to restart kernel after running this cell!:\n",
+    "# !pip install -e /nsls2/users/alevin/repos/PyHyperScattering  # to use pip to install via directory"
    ]
   },
   {
@@ -288,9 +293,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "nrss",
    "language": "python",
-   "name": "python3"
+   "name": "nrss"
   },
   "language_info": {
    "codemirror_mode": {
@@ -302,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
