add zarrs path to an NSLSII proposal folder

--- a/tutorial/plotting_shotcuts_branch/plotting_shortcuts_sst1_carbon_prsoxs.ipynb
+++ b/tutorial/plotting_shotcuts_branch/plotting_shortcuts_sst1_carbon_prsoxs.ipynb
@@ -51,26 +51,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ebcfdba-3989-4fcb-8e66-c241a321827e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fa625ad-1430-4286-ac94-a02a0e5d218e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%autoreload"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "96adcc47-a83c-4c87-a74b-f87496d0f753",
    "metadata": {},
@@ -87,14 +67,15 @@
    },
    "outputs": [],
    "source": [
-    "basePath = pathlib.Path.cwd()"
+    "notebookPath = pathlib.Path.cwd() \n",
+    "zarrsPath = notebookPath  # use this if the example data is in the same folder as this notebook\n",
+    "# zarrsPath = pathlib.Path('/nsls2/data/sst/proposals/2024-2/pass-313412/rsoxs_hackathon_2024_data')  # use this if working in the NSLS2 Jupyterhub to access zarrs"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "8",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -110,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "[f.name for f in basePath.glob('*zarr')]"
+    "[f.name for f in zarrsPath.glob('*zarr')]"
    ]
   },
   {
@@ -122,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "DS = xr.open_zarr(basePath.joinpath('cartesian_data_PM6_CF.zarr'))\n",
+    "DS = xr.open_zarr(zarrsPath.joinpath('cartesian_data_PM6_CF.zarr'))\n",
     "\n",
     "# Compute any dask coordiantes\n",
     "for coord_name, coord_data in DS.coords.items():\n",
@@ -205,7 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "[f.name for f in basePath.glob('*zarr')]"
+    "[f.name for f in zarrsPath.glob('*zarr')]"
    ]
   },
   {
@@ -217,7 +198,7 @@
    },
    "outputs": [],
    "source": [
-    "DS = xr.open_zarr(basePath.joinpath('polar_data_PM6_CF.zarr'))\n",
+    "DS = xr.open_zarr(zarrsPath.joinpath('polar_data_PM6_CF.zarr'))\n",
     "\n",
     "# Compute any dask coordiantes\n",
     "for coord_name, coord_data in DS.coords.items():\n",
