--- a/tutorial/plotting_shotcuts_branch/plotting_shortcuts_sst1_carbon_prsoxs.ipynb
+++ b/tutorial/plotting_shotcuts_branch/plotting_shortcuts_sst1_carbon_prsoxs.ipynb
@@ -221,7 +221,7 @@
     "}\n",
     "\n",
     "DA.attrs['plot_hints'] = {\n",
-    "    'cmap': 'turbo',\n",
+    "    'I_cmap': 'turbo',\n",
     "    'xscale': 'log',\n",
     "    'yscale': 'log'\n",
     "}\n",
@@ -331,18 +331,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62185924-2ae2-46a3-adfe-64c3a7644afa",
+   "id": "0e7e27af-0e24-4363-b974-9dd61256184a",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e307c9fd-25b7-4128-aa4d-4d015e3ec9cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Call Imap function, return Imap figure & axes list \n",
+    "# fig, ax = DA.pt.plot_ARmap(ar_vlim=0.4, save=False)\n",
+    "fig, ax = DA.pt.plot_ARmap(ar_vlim=0.4)\n",
+    "\n",
+    "# Plot\n",
+    "plt.show()\n",
+    "plt.close('all')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -390,6 +390,7 @@
    "cell_type": "markdown",
    "id": "bb3a0085-5e8c-4354-a5e9-20bcb9d1f063",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -591,257 +592,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### 1. 2D AR Maps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ed14127-4117-406a-a5cb-fcc2279e5524",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# make selection, averaged polarizations\n",
-    "edge = 'carbon'\n",
-    "# # DS = rsoxs_datasets[f'polar_{edge}']\n",
-    "# DS = rsoxs_datasets[f'polar_{edge}_reverse']\n",
-    "\n",
-    "intensity_type = 'raw'\n",
-    "chi_width = 90\n",
-    "q_slice = slice(0.009, 0.08)\n",
-    "e_slice = slice(282, 292)\n",
-    "\n",
-    "for sample_name in DS.sample_name.values[:]:  \n",
-    "    pol_paras = []\n",
-    "    pol_perps = []\n",
-    "    for pol in [0, 90]:\n",
-    "        para_DA, perp_DA = make_para_perp_DAs(DS, sample_name, intensity_type, pol, (q_slice.start,q_slice.stop), chi_width) \n",
-    "        pol_paras.append(para_DA)\n",
-    "        pol_perps.append(perp_DA)\n",
-    "\n",
-    "\n",
-    "    pol_paras[0] = pol_paras[0].assign_coords({'chi': np.linspace(0, chi_width, len(pol_paras[0].chi.values))})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_paras[1].chi.values))})\n",
-    "    pol_paras[1] = pol_paras[1].assign_coords({'chi': np.linspace(0, chi_width, len(pol_paras[1].chi.values))})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_paras[1].chi.values))})\n",
-    "    pol_perps[0] = pol_perps[0].assign_coords({'chi': np.linspace(0, chi_width, len(pol_perps[0].chi.values))})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_perps[1].chi.values))})\n",
-    "    pol_perps[1] = pol_perps[1].assign_coords({'chi': np.linspace(0, chi_width, len(pol_perps[1].chi.values))})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_perps[1].chi.values))})\n",
-    "\n",
-    "    pol_paras[0] = pol_paras[0].interp({'chi': pol_paras[1].chi.values})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_paras[1].chi.values))})\n",
-    "    pol_perps[0] = pol_perps[0].interp({'chi': pol_perps[1].chi.values})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_perps[1].chi.values))})\n",
-    "\n",
-    "    para_DA = (pol_paras[0] + pol_paras[1])/2\n",
-    "    perp_DA = (pol_perps[0] + pol_perps[1])/2\n",
-    "\n",
-    "    para_DA = para_DA.assign_coords({'polarization':'avg'})\n",
-    "    perp_DA = perp_DA.assign_coords({'polarization':'avg'})\n",
-    "\n",
-    "    para_DA = para_DA.interpolate_na(dim='q')\n",
-    "    perp_DA = perp_DA.interpolate_na(dim='q')\n",
-    "\n",
-    "    pol = str(para_DA.polarization.values) \n",
-    "\n",
-    "    # Select AR data\n",
-    "    ar_DA = (para_DA.mean('chi') - perp_DA.mean('chi')) / (para_DA.mean('chi') + perp_DA.mean('chi'))\n",
-    "\n",
-    "    # Plot\n",
-    "    vlim = 0.4\n",
-    "    ax = ar_DA.sel(energy=e_slice).plot.pcolormesh(figsize=(8,5), norm=plt.Normalize(-vlim, vlim))\n",
-    "    # ax = ar_DA.sel(energy=slice(energy_min,energy_max)).plot(figsize=(8,5))\n",
-    "\n",
-    "    ax.figure.suptitle('Anisotropy Ratio (AR) Map', fontsize=14, x=0.43)\n",
-    "    ax.axes.set(title=f'{sample_name}, Polarization = {pol}°, Chi Width = {chi_width}°', ylabel='Photon Energy [eV]', xlabel='q [$Å^{-1}$]', xscale='log')\n",
-    "    ax.colorbar.set_label('AR [arb. units]', rotation=270, labelpad=12)\n",
-    "\n",
-    "    # savePath = plotsPath.joinpath('rsoxs_carbon_reverse/ar_maps_v1')\n",
-    "    # savePath.mkdir(exist_ok=True)\n",
-    "    # ax.figure.savefig(savePath.joinpath( \n",
-    "    #     f'vset_{sample_name}_{intensity_type}_chiWidth-{chi_width}deg_q-{q_slice.start}-{q_slice.stop}_energy{e_slice.start}-{e_slice.stop}_pol{pol}deg.png'), \n",
-    "    #                   dpi=120)\n",
-    "\n",
-    "    plt.show()\n",
-    "    plt.close('all')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0acae0e-969f-4900-a154-57b0c2a96015",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# make selection, averaged polarizations\n",
-    "edge = 'carbon'\n",
-    "# # DS = rsoxs_datasets[f'polar_{edge}']\n",
-    "# DS = rsoxs_datasets[f'polar_{edge}_reverse']\n",
-    "\n",
-    "intensity_type = 'raw'\n",
-    "chi_width = 90\n",
-    "q_slice = slice(0.009, 0.08)\n",
-    "e_slice = slice(282, 292)\n",
-    "\n",
-    "for sample_name in DS.sample_name.values[:]:  \n",
-    "    pol_paras = []\n",
-    "    pol_perps = []\n",
-    "    for pol in [0, 90]:\n",
-    "        para_DA, perp_DA = make_para_perp_DAs(DS, sample_name, intensity_type, pol, (q_slice.start,q_slice.stop), chi_width) \n",
-    "        pol_paras.append(para_DA)\n",
-    "        pol_perps.append(perp_DA)\n",
-    "\n",
-    "\n",
-    "    pol_paras[0] = pol_paras[0].assign_coords({'chi': np.linspace(0, chi_width, len(pol_paras[0].chi.values))})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_paras[1].chi.values))})\n",
-    "    pol_paras[1] = pol_paras[1].assign_coords({'chi': np.linspace(0, chi_width, len(pol_paras[1].chi.values))})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_paras[1].chi.values))})\n",
-    "    pol_perps[0] = pol_perps[0].assign_coords({'chi': np.linspace(0, chi_width, len(pol_perps[0].chi.values))})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_perps[1].chi.values))})\n",
-    "    pol_perps[1] = pol_perps[1].assign_coords({'chi': np.linspace(0, chi_width, len(pol_perps[1].chi.values))})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_perps[1].chi.values))})\n",
-    "\n",
-    "    pol_paras[0] = pol_paras[0].interp({'chi': pol_paras[1].chi.values})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_paras[1].chi.values))})\n",
-    "    pol_perps[0] = pol_perps[0].interp({'chi': pol_perps[1].chi.values})  # .assign_coords({'chi': np.linspace(0, 90,len(pol_perps[1].chi.values))})\n",
-    "\n",
-    "    para_DA = (pol_paras[0] + pol_paras[1])/2\n",
-    "    perp_DA = (pol_perps[0] + pol_perps[1])/2\n",
-    "\n",
-    "    para_DA = para_DA.assign_coords({'polarization':'avg'})\n",
-    "    perp_DA = perp_DA.assign_coords({'polarization':'avg'})\n",
-    "\n",
-    "    para_DA = para_DA.interpolate_na(dim='q')\n",
-    "    perp_DA = perp_DA.interpolate_na(dim='q')\n",
-    "\n",
-    "    pol = str(para_DA.polarization.values) \n",
-    "\n",
-    "    # Select AR data\n",
-    "    ar_DA = (para_DA.mean('chi') - perp_DA.mean('chi')) #/ (para_DA.mean('chi') + perp_DA.mean('chi'))\n",
-    "\n",
-    "    # Plot\n",
-    "    # vlim = 0.4\n",
-    "    cmap = plt.cm.turbo\n",
-    "    cmap.set_bad('black')\n",
-    "    cmax = ar_DA.sel(energy=e_slice).compute().quantile(0.999)\n",
-    "    ax = ar_DA.sel(energy=e_slice).plot.pcolormesh(figsize=(8,5), norm=LogNorm(1e0, cmax), cmap=cmap)\n",
-    "    # ax = ar_DA.sel(energy=slice(energy_min,energy_max)).plot(figsize=(8,5))\n",
-    "\n",
-    "    ax.figure.suptitle('$\\parallel$ - $\\perp$ Intensity Absolute Difference', fontsize=14, x=0.43)\n",
-    "    ax.axes.set(title=f'{sample_name}, Polarization = {pol}°, Chi Width = {chi_width}°', ylabel='Photon Energy [eV]', xlabel='q [$Å^{-1}$]', xscale='log')\n",
-    "    ax.colorbar.set_label('AR [arb. units]', rotation=270, labelpad=12)\n",
-    "\n",
-    "    savePath = plotsPath.joinpath('rsoxs_carbon_para-perp_maps_v1')\n",
-    "    savePath.mkdir(exist_ok=True)\n",
-    "    ax.figure.savefig(savePath.joinpath( \n",
-    "        f'{sample_name}_{intensity_type}_chiWidth-{chi_width}deg_q-{q_slice.start}-{q_slice.stop}_energy{e_slice.start}-{e_slice.stop}_pol{pol}deg.png'), \n",
-    "                      dpi=120)\n",
-    "\n",
-    "    # plt.show()\n",
-    "    plt.close('all')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "473b9a23-ff8d-4b36-96b9-13d0ab55a8cb",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "cmin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3d74f1c-981b-4e17-9931-a71cdb6e1ed0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "cmax"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# make selection, individual polarizations\n",
-    "edge = 'carbon'\n",
-    "# DS = rsoxs_datasets[f'polar_{edge}']\n",
-    "DS = rsoxs_datasets[f'polar_{edge}_tilted']\n",
-    "\n",
-    "intensity_type = 'corr'\n",
-    "chi_width = 90\n",
-    "q_slice = slice(0.009, 0.08)\n",
-    "e_slice = slice(282, 292)\n",
-    "\n",
-    "for sample_name in tqdm(DS.sample_name.values[:]):  \n",
-    "    for pol in [0, 45, 90]:\n",
-    "        para_DA, perp_DA = make_para_perp_DAs(DS, sample_name, intensity_type, pol, (q_slice.start,q_slice.stop), chi_width) \n",
-    "\n",
-    "\n",
-    "        # Select AR data\n",
-    "        ar_DA = (para_DA.mean('chi') - perp_DA.mean('chi')) / (para_DA.mean('chi') + perp_DA.mean('chi'))\n",
-    "\n",
-    "        # Plot\n",
-    "        vlim = 0.5\n",
-    "        ax = ar_DA.sel(energy=e_slice).plot.pcolormesh(figsize=(8,5), norm=plt.Normalize(-vlim, vlim))\n",
-    "        # ax = ar_DA.sel(energy=slice(energy_min,energy_max)).plot(figsize=(8,5))\n",
-    "\n",
-    "        ax.figure.suptitle('Anisotropy Ratio (AR) Map', fontsize=14, x=0.43)\n",
-    "        ax.axes.set(title=f'{sample_name}, Polarization = {pol}°, Chi Width = {chi_width}°', ylabel='Photon Energy [eV]', xlabel='q [$Å^{-1}$]', xscale='log')\n",
-    "        ax.colorbar.set_label('AR [arb. units]', rotation=270, labelpad=12)\n",
-    "\n",
-    "        savePath = plotsPath.joinpath('rsoxs_carbon_tilted/ar_maps_v1')\n",
-    "        savePath.mkdir(exist_ok=True)\n",
-    "        ax.figure.savefig(savePath.joinpath( \n",
-    "            f'vset_{sample_name}_{intensity_type}_chiWidth-{chi_width}deg_q-{q_slice.start}-{q_slice.stop}_energy{e_slice.start}-{e_slice.stop}_pol{pol}deg.png'), \n",
-    "                          dpi=120)\n",
-    "\n",
-    "        # plt.show()\n",
-    "        plt.close('all')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "65",
    "metadata": {
     "tags": []
    },
    "source": [
     "### 2. 1D meaned AR linecuts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64cf5091-6162-4b59-a696-4b10cabea92e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "DS"
    ]
   },
   {
