docs: add example data download instructions

--- a/tutorial/Demo - XArrayResonantScattering.ipynb
+++ b/tutorial/Demo - XArrayResonantScattering.ipynb
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A side warning here: if you are using my example data, at this point the memory usage will be kind of insane (~20 GB peak, about 15.5 GB at rest).  We can clean up by tossing the raw data and integrator, which will take us down to something ~2 GB:"
+    "A side warning here: if you are using my example data (see [Obtaining Example Data](../docs/source/getting_started/example_data.rst)), at this point the memory usage will be kind of insane (~20 GB peak, about 15.5 GB at rest).  We can clean up by tossing the raw data and integrator, which will take us down to something ~2 GB:"
    ]
   },
   {
