--- a/tutorial/SST1 data tutorial.ipynb
+++ b/tutorial/SST1 data tutorial.ipynb
@@ -847,7 +847,7 @@
    "source": [
     "Now, from files:\n",
     "\n",
-    "You'll need to modify this path to some RSoXS data on disk.  If you don't have any, feel free to skip ahead, or download some from the example data pack on the GitHub repo (look under releases)."
+    "You'll need to modify this path to some RSoXS data on disk.  If you don't have any, feel free to skip ahead or download data from the [example data release](https://github.com/usnistgov/PyHyperScattering/releases/tag/0.0.0-example-data).  See [Obtaining Example Data](../docs/source/getting_started/example_data.rst) for details."
    ]
   },
   {
